tests/scripts/enum4.hk.tr.err
error: 9:9 - expected `=>` after pattern, found `(`
    Some(value) => println(value),
        ^
