tests/scripts/enum4.hk
enum Option {
  None,
  Some(string),
}

fn main() {
  let option = Option::Some("Hello");
  match option {
    None => println("None"),
    Some(value) => println(value),
  }
}

main()

